---------------------------------------------------------------------------------------------------
Version: 0.00.00
Date: 00. 00. 0000
  Features:
    -
  Changes:
    - Redesigned the subfactory and module dialogs
    - Added some info about why a dialog can not be submitted
    - Adjusted styling in numerous ways
  Bugfixes:
    - Fixed the issue that opening a vanilla interface while a Factory Planner modal dialog is open would not close the main FP interface window

---------------------------------------------------------------------------------------------------
Version: 0.18.50
Date: 04. 08. 2020
  Changes:
    - Redesigned the recipe picker dialog
  Bugfixes:
    - Fixed that setting a limit on a machine would not work properly
    - Fixed a crash when selecting certain fuels

---------------------------------------------------------------------------------------------------
Version: 0.18.49
Date: 03. 08. 2020
  Features:
    - Added the ability to add a recipe right below the ingredient that it should produce by shift-left-clicking the ingredient
  Changes:
    - Removed the ability to manually order top level ingredients and byproducts, the same goes for any recipe line items. This was done for two reasons: Firstly, it was not very useful as they shifted around all the time anyways when new recipes are added or removed. Secondly, this frees up some key combinations for more useful actions, like the one above.
    - Redesigned the preferences dialog
  Bugfixes:
    - Fixed that the dialog to change machine would sometimes highlight the wrong machine as being selected
    - Fixed that downgrading a machine wouldn't always show an error message when unsuccessful
    - Fixed that modded rocket silos were not picked up on correctly

---------------------------------------------------------------------------------------------------
Version: 0.18.48
Date: 02. 08. 2020
  Changes:
    - Redesigned the utility dialog
  Bugfixes: