@@ -479,5 +479,5 @@ tut_beacon_beacon=Left/Right-click: Edit\nControl-right-click: Delete\nShift-lef
 tut_product=Left-click: Prioritize\nRight-click: Specify amount
 tut_byproduct=Right-click: Specify amount
 tut_ingredient=Left-click: Add recipe to the end\nRight-click: Specify amount\nShift-left-click: Add recipe after this
-tut_fuel=Left-click: Add recipe\nRight-click: Edit\nShift-left-click: Upgrade\nControl-left-click: Downgrade
+tut_fuel=Left-click: Add recipe\nRight-click: Change type\nShift-left-click: Add recipe after this
 tut_alt_action=\nAlt-click: __1__
